Intento de prettys

--- a/Tests/1_test_mod_rewrite/.htaccess
+++ b/Tests/1_test_mod_rewrite/.htaccess
@@ -1,2 +1,4 @@
 RewriteEngine on
 RewriteRule ^home/(\w+)/?$ index.php?page=controller_home&op=list
+
+RewriteRule ^contact/list_contact$ ?module=contact&function=list_contact
